tooling/nargo_cli/tests/snapshots/execution_success/regression_6834/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: u8):
    (no terminator instruction)
}
[regression_6834] Circuit output: 0
